--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -443,10 +443,22 @@
   note = "(visitado 2024)"
 }
 
-@online{GraphiqueSF,
-  author = "{Graphique, La Boîte}",
-  title = "{Adonide}",
-  url = "https://www.myfonts.com/es/collections/adonide-font-la-boite-graphique",
+@online{DeLaGrana2024,
+  author = "De La Grana, A.",
+  title = "{Jetpack Compose vs XML: Android UI development compared}",
+  year = "2024",
+  month = "agosto 28",
+  url = "https://qubika.com/blog/jetpack-compose-vs-xml-android-u/",
+  note = "(visitado 2024)"
+}
+
+
+@online{Ozaltun2022,
+  author = "Özaltun, S.",
+  title = "{ViewBinding vs DataBinding | Diferencias y Detalles}",
+  year = "2022",
+  month = "Noviembre 18",
+  url = "https://medium.com/huawei-developers/viewbinding-vs-databinding-differences-and-detailed-8bfd4dbe290f",
   note = "(visitado 2024)"
 }
 
