--- a/marco_teorico.tex
+++ b/marco_teorico.tex
@@ -18,8 +18,10 @@ Sin embargo, a pesar de estos avances, persisten desafíos significativos. La fa
 Además, la lengua de señas, a menudo catalogada como una lengua minoritaria, es aprendida solamente por una pequeña fracción de la población sin discapacidades auditivas. Esta limitada difusión crea una brecha de comunicación significativa, contribuyendo a la marginación de la comunidad sorda y limitando su participación plena en actividades sociales y económicas. Esto subraya la necesidad de una mayor educación y sensibilización sobre la lengua de señas para promover una verdadera inclusión \cite{MelendezLabrador2021}.
 
 \section{Lengua de Señas de Guatemala (LENSEGUA)}
+
 \subsection{Historia}
-La Lengua de Señas de Guatemala (LENSEGUA) ha evolucionado como una herramienta vital de comunicación para la comunidad sorda guatemalteca. Aunque su desarrollo específico ha sido menos documentado en comparación con lenguas de señas de otros países, LENSEGUA ha sido influenciada tanto por “Señas Caseras ” de diferentes departamentos del país como por interacciones con lenguas de señas de otros países \cite{Aroche2022} \cite{EndangeredLanguages}.
+La Lengua de Señas de Guatemala (LENSEGUA) ha evolucionado como una herramienta vital de comunicación para la comunidad sorda guatemalteca. Aunque su desarrollo específico ha sido menos documentado en comparación con lenguas de señas de otros países, LENSEGUA ha sido influenciada tanto por ``Señas Caseras''\footnote{Se conoce como ``Señas Caseras'' al sistema de comunicación que utilizan los niños sordos, que no han sido expuestos a la lengua de señas, con padres oyentes para poder comunicarse y desenvolverse en el ámbito familiar \cite{EnSenasCultura}.} de diferentes departamentos del país como por interacciones con lenguas de señas de otros países \cite{Aroche2022} \cite{EndangeredLanguages}.
+
 
 Antes de la formalización del uso de LENSEGUA, no existía un manual estandarizado que facilitara el aprendizaje de la lengua de señas guatemalteca. Hoy en día de hecho todavía existen diferencias entre las señas utilizadas en los departamentos del país. Sin embargo, en julio de 2001, el Comité Pro Ciegos y Sordos de Guatemala, una institución pionera en la educación y rehabilitación de personas con discapacidad auditiva, publicó el primer manual oficial para el aprendizaje de LENSEGUA. Este manual representó un avance crucial en la estandarización y enseñanza de la lengua de señas, proporcionando un recurso esencial para los estudiantes, profesionales y la comunidad en general interesada en aprender este método de comunicación \cite{deLeon2021}.
 
